--- a/Login.html
+++ b/Login.html
@@ -34,7 +34,7 @@
                     <a href="#" class="buton">
                         <button class="Enlace-B">Empresa</button>
                     </a>
-                    <div action="html/bancontdo.html">
+                    <form action="html/bancontdo.html">
 
                         <div class="info-Usurio">
                             <input type="text" name="Usurio" placeholder="Usuario" required class="input-text" pattern="^(?!\s+$).*\S$">
@@ -49,7 +49,7 @@
                         </div>
 
 
-                    </div>
+                    </form>
 
 
 
